css/style.css
/* ... */
@media (max-width: 991px) {
    .contact .contact-info-item,
    .portfolio .portfolio-item,
    .certification-card {
      flex: 0 0 100%;
      max-width: 100%;
    }
  
    .home {
      flex-direction: column;
      align-items: center;
      text-align: center;
      margin-bottom: 20px;
    }
  
    .home .home-info {
      flex: 0 0 100%;
      max-width: 100%;
      margin-bottom: 20px;
    }
  
    .home .home-img {
      display: block;
      text-align: center;
      margin-top: 20px;
      max-width: 80%;
    }

    .home .home-img img {
      max-width: 100%;
      height: auto;
      border-radius: 10px;
      max-height: 300px;
      object-fit: cover;
    }
  
    .download-cv-button {
      display: inline-block;
      margin: 20px auto;
      padding: 12px 30px;
      font-size: 16px;
      font-weight: bold;
      color: white;
      background-color: #ff4b4b;
      border-radius: 30px;
      border: none;
      text-decoration: none;
      transition: background-color 0.3s ease;
    }
  
    .download-cv-button:hover {
      background-color: #e04141;
    }
  
    .about .about-content {
      display: flex;
      flex-direction: column;
    }
  
    .about .about-content .skills,
    .about .about-content .personal-info {
      order: 1;
      flex: 0 0 100%;
      max-width: 100%;
      margin-bottom: 30px;
    }
  
    .about .about-content .education,
    .about .about-content .internship {
      flex: 0 0 100%;
      max-width: 100%;
      margin-top: 30px;
    }
    .aside .logo {
        padding-top: 10px;
        margin-bottom: 10px;
      }
      
      .aside ul {
        margin-top: 5px;
      }
      
  }
  

@media (max-width: 767px) { 
    .certification-container {
        padding: 10px;
    }
    .certification-item {
        padding: 20px;
    }
    .contact .contact-form .col-6,
    .contact .contact-info-item,
    .portfolio .portfolio-item,
    .certification-card,
    .about .about-content .internship,
    .about .about-content .education,
    .about .about-content .personal-info
    {
        flex: 0 0 100%;
        max-width: 100%;
    }
    .home .home-img {
        display: none;
    }
    .home .home-info {
        padding: 15px;
    }
}

